Issue #9907: set up Java16 build